# joi-to-zod

./: .gitignore  .rustfm.toml  Cargo.toml  flake.nix  justfile  rust-toolchain.toml
crates/code-gen/: Cargo.toml
crates/code-gen/src/: joi.rs  joi_types.rs  lib.rs
crates/node-package/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/node-package/__test__/: index.spec.mjs  index.spec.ts  schemas.ts
crates/node-package/example/: basic.ts  schemas.ts
crates/node-package/npm/darwin-arm64/: README.md  package.json
crates/node-package/npm/darwin-x64/: README.md  package.json
crates/node-package/npm/linux-arm64-gnu/: README.md  package.json
crates/node-package/npm/linux-arm64-musl/: README.md  package.json
crates/node-package/npm/linux-x64-gnu/: README.md  package.json
crates/node-package/npm/linux-x64-musl/: README.md  package.json
crates/node-package/npm/win32-x64-msvc/: README.md  package.json
crates/node-package/src/: lib.rs
nix/: rust.nix
