[package]
name = "code-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genco = "0.17.5"
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }


[dev-dependencies]
serde_json = "1.0.96"
