[package]
name = "code-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genco = "0.17.5"
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
clap = { version = "4.2.7", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.96"

[lib]
name = "code_gen"
path = "src/lib.rs"

[[bin]]
name = "code_gen_cli"
path = "src/bin/bin.rs"